# home-assistant-appdaemon

./: .gitignore  AGENTS.md  README.md  appdaemon.yaml  mise.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml
apps/: __init__.py  apps.yaml  base_app.py  hvac_app.py  solar_app.py
apps/appdaemon_protocols/: appdaemon_factory.py  appdaemon_logger.py  appdaemon_service.py  appdaemon_state.py
apps/entities/: entities.py
apps/hvac/: __init__.py  cooling_estimator.py  dhw_estimator.py  heating_estimator.py  hvac.py  hvac_configuration.py  hvac_state.py  hvac_state_factory.py
apps/solar/: battery_discharge_slot.py  battery_discharge_slot_estimator.py  battery_max_current_estimator.py  battery_reserve_soc_estimator.py  consumption_forecast.py  excess_energy_estimator.py  forecast_factory.py  price_forecast.py  production_forecast.py  solar.py  solar_configuration.py  solar_state.py  solar_state_factory.py  state.py  state_factory.py  storage_mode.py  storage_mode_estimator.py  weather_forecast.py
apps/units/: battery_current.py  battery_soc.py  battery_voltage.py  celsius.py  energy_kwh.py  energy_price.py  fifteen_minute_period.py  fifteen_minute_price.py  hourly_energy.py  hourly_period.py  hourly_price.py  hourly_weather.py  money.py
apps/utils/: adjusters.py  appdaemon_utils.py  battery_converters.py  battery_estimators.py  energy_aggregators.py  hvac_estimators.py  price_estimators.py  revenue_estimators.py  safe_converters.py  temperature_estimators.py  time_utils.py
scripts/: run
tests/: conftest.py
tests/entities/: test_entities.py
tests/hvac/: conftest.py  test_cooling_estimator.py  test_dhw_estimator.py  test_heating_estimator.py  test_hvac.py  test_hvac_state_factory.py
tests/solar/: conftest.py  test_battery_discharge_slot.py  test_battery_discharge_slot_estimator.py  test_battery_max_current_estimator.py  test_battery_reserve_soc_estimator.py  test_consumption_forecast.py  test_excess_energy_estimator.py  test_forecast_factory.py  test_price_forecast.py  test_production_forecast.py  test_solar.py  test_solar_state_factory.py  test_state_factory.py  test_storage_mode_estimator.py  test_weather_forecast.py
tests/units/: test_battery_current.py  test_battery_discharge_slot.py  test_battery_soc.py  test_battery_voltage.py  test_celsius.py  test_energy_kwh.py  test_energy_price.py  test_fifteen_minute_period.py  test_fifteen_minute_price.py  test_hourly_energy.py  test_hourly_period.py  test_hourly_price.py  test_hourly_weather.py  test_money.py
tests/utils/: test_adjusters.py  test_battery_converters.py  test_battery_estimators.py  test_energy_aggregators.py  test_hvac_estimators.py  test_price_estimators.py  test_revenue_estimators.py  test_safe_converters.py  test_temperature_estimators.py  test_time_utils.py
